feat: secound commit on application