@@ -7,6 +7,8 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
 
+import org.springframework.retry.annotation.Backoff;
+import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
@@ -22,6 +24,8 @@ public class ExternalApiService {
     @Autowired
     private ApiConfig apiConfig;
 
+    @Cacheable(value = "ifHoliday", key = "'latest'", unless = "#result == null")
+    @Retryable(maxAttempts = 3, backoff = @Backoff(delay = 2000))
     public boolean checkIfHoliday(LocalDate estimatedDeliveryDate) {
         try {
             String url = apiConfig.getHolidayApiUrl(estimatedDeliveryDate.getYear());
@@ -43,6 +47,7 @@ public class ExternalApiService {
 
     //Ativando Cache na respota da api dogFunFact caso o resultado da chamada seja 'No fun fact avaible'
     @Cacheable(value = "dogFunFact", key = "'latest'", unless = "#result == null || #result.equals('No fun fact available')")
+    @Retryable(maxAttempts = 3, backoff = @Backoff(delay = 2000))
     public String getDogFunFact() {
         try {
             String url = apiConfig.getFunFactApiUrl();
@@ -54,7 +59,7 @@ public class ExternalApiService {
             return Optional.ofNullable(response.getBody())
                     .map(body -> (List<?>) body.get("data"))
                     .filter(dataList -> !dataList.isEmpty())
-                    .map(dataList -> (Map<?, ?>) dataList.get(0))
+                    .map(dataList -> (Map<?, ?>) dataList.getFirst())
                     .map(firstItem -> (Map<?, ?>) firstItem.get("attributes"))
                     .map(attributes -> attributes.get("body"))
                     .filter(String.class::isInstance)
